# clcli

./: meson.build
clcli/: builder.cpp  builder.h  main.cpp  util.cpp  util.h  visit.cpp  visit.h
example/: coder.h  decoder.c  encoder.c  generated.h  internal.h  main.c
include/: columns.h
src/: builder.cpp  columns.c  util.cpp  visit.cpp  visit.h
